[package]
name = "junit"
version = "0.2.1"
edition = "2021"
authors = ["JoKiv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[profile.release]
strip = true        # Automatically strip symbols from the binary.
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization (LTO)
codegen-units = 1   # Reduce Parallel Code Generation Units 
